# Snake_Tetris_on_C-

./: README.md
src/: Makefile
src/brick_game/snake/: backend.h  init_field_back.cc  init_head_and_tail.cc  set_apple_in_field_back.cc  set_apple_rand.cc  snake_move_hangling_back.cc
src/brick_game/tetris/: backend.h  is_four_row_full.c
src/dvi/: documantation.tex
src/games/snake_desktop_build/: CMakeCache.txt  Makefile  cmake_install.cmake  snake_desktop
src/games/snake_desktop_build/.qt/: QtDeploySupport.cmake
src/games/snake_desktop_build/snake_desktop_autogen/: deps  mocs_compilation.cpp
src/games/snake_desktop_build/snake_desktop_autogen/NTHHH2CSJL/: moc_frontend.cpp  moc_frontend.cpp.d
src/games/snake_desktop_build/snake_logic_autogen/: deps
src/games/tetris_desktop_build/: CMakeCache.txt  Makefile  cmake_install.cmake  tetris_desktop
src/games/tetris_desktop_build/.qt/: QtDeploySupport.cmake
src/games/tetris_desktop_build/logic_autogen/: deps
src/games/tetris_desktop_build/tetris_desktop_autogen/: deps
src/games/tetris_desktop_build/tetris_desktop_autogen/NTHHH2CSJL/: moc_frontend.cpp.d
src/gui/snake/: CMakeLists.txt  snake_cli.cc  snake_desktop.cc
src/gui/snake/cli/: custom_getch.cc  frontend.h  game_process.cc  init_field.cc  init_menu.cc  init_ncurs.cc  print_field.cc  print_game_info.cc  update_field_after_move.cc
src/gui/snake/desktop/: frontend.h  gameFieldWidget.cc  menuWidget.cc
src/gui/tetris/: CMakeLists.txt  tetris_cli.c  tetris_desktop.cc
src/gui/tetris/cli/: frontend.h  set_values_to_start.c
src/gui/tetris/desktop/: erase_figure_in_field.cc  frontend.h  gameFieldWidget.cc  init_styles.cc  menu.cc  set_field_after_full_row.cc  set_figure_in_field.cc
src/gui/tetris/desktop/backend/: backend.h  erase_figure_in_field_back.cc  is_four_row_full.cc  is_neighbors_below.cc  is_neighbors_left.cc  is_neighbors_right.cc  rotate.cc  set_figure.cc
src/tests/: CMakeLists.txt  snake_tests.cc  tetris_tests.check
